make Observable register deep changes properly; add mergeInto to ObjectHelper; fix type handling for ObjectHelper.isPropertyWritable; add isPropertyReadable to ObjectHelper;

--- a/documentation/index.css
+++ b/documentation/index.css
@@ -8,6 +8,10 @@ body {
     padding: 0;
 }
 
+div#list div > div {
+    margin-left: 16px;
+}
+
 a {
     color: #000000;
     text-decoration: none;
